[package]
name = "tmp117"
version = "0.1.0"
edition = "2021"
authors = ["xgroleau <xavgroleau@gmail.com>"]

[lib]
harness = false

[dependencies]
defmt = { version = "0.3.0", optional = true}

embedded-hal = { version = "1.0.0-alpha.7" }
embedded-hal-async = { version = "0.1.0-alpha.1" }

maybe-async-cfg = "0.2.3"
modular-bitfield = "0.11.2"
device-register = { version = "0.1.2" }
device-register-async = { version = "0.1.1" }

[dev-dependencies]
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"

embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy",  features = ["defmt", "nightly", "integrated-timers"] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "nightly", "unstable-traits"] }

defmt = "0.3.0"
defmt-rtt = "0.3.0"
defmt-test = "0.3.0"
