[package]
name = "tmp117"
version = "0.2.2"
edition = "2021"
authors = ["xgroleau <xavgroleau@gmail.com>"]
repository = "https://github.com/xgroleau/tmp117-rs"
license = "MIT OR Apache-2.0"
homepage= "https://github.com/xgroleau/tmp117-rs"
description = "A no-std toolkit to describe the register of your peropherals to ease driver development"
documentation = "https://docs.rs/tmp117"
readme = "README.md"
keywords = ["driver", "embedded-hal-driver", "no-std", "tmp117"]
categories = ["embedded", "hardware-support", "no-std"]

exclude = [
    "flake.nix",
    "flake.lock",
    ".envrc",
]

[dependencies]
defmt = { version = "0.3", optional = true}

embedded-hal = { version = "1.0.0-alpha.9" }
embedded-hal-async = { version = "0.2.0-alpha.0" }

modular-bitfield = "0.11.2"
device-register =  "0.3.1"
device-register-async = "0.3.1"

[dev-dependencies]
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"

embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy",  features = ["defmt", "nightly", "integrated-timers"] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "nightly", "unstable-traits"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy",features = ["defmt", "unstable-traits", "nightly"] }

defmt = "0.3"
defmt-rtt = "0.3"
defmt-test = "0.3"
