[package]
name = "tmp117"
version = "1.0.0"
edition = "2021"
authors = ["xgroleau <xavgroleau@gmail.com>"]
repository = "https://github.com/xgroleau/tmp117-rs"
license = "MIT OR Apache-2.0"
homepage= "https://github.com/xgroleau/tmp117-rs"
description = "Driver for the tmp117 using the embedded-hal"
documentation = "https://docs.rs/tmp117"
readme = "README.md"
keywords = ["driver", "embedded-hal-driver", "no-std", "tmp117", "temperature", "sensor", "driver"]
categories = ["embedded", "hardware-support", "no-std"]
rust-version = "1.75"

exclude = [
    ".envrc",
    "flake.nix",
    "flake.lock",
]

autoexamples = false

[lib]
doctest = false

[dependencies]
defmt = { version = "0.3", optional = true}

embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }

bilge = "0.2"
device-register = "0.4"
device-register-async = "0.4"
